--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: skyblue;
+  min-height: 110vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: start;
+  margin: 0.2%;
+  box-sizing: border-box;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .App-link {
